--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
+    "firebase": "^9.19.1",
     "framer-motion": "^10.9.2",
     "he": "^1.2.0",
     "react": "^18.2.0",
